@startuml ER_diagram
skinparam linetype ortho

' -------------------
' ENTITIES
' -------------------

entity "User" as User {
    + user_id : int <<PK>>
    --
    email : string
    password : string <<nullable>>
    account_type : string <<enum>>  ' CUSTOMER, ARTIST, ADMIN, GOOGLE
}

entity "Artist" as Artist {
    + user_id : int <<PK, FK>>
    --
    first_name : string
    last_name : string
    bio : string
    style : string
}

entity "Product" as Product {
    + product_id : int <<PK>>
    --
    title : string
    secret_price : decimal
    currency : string
    image_url : string
    sold : boolean
    description : string
    year_created : int
    product_size : string
    date_added : date
    artist_id : int <<FK>>
}

entity "Address" as Address {
    + address_id : int <<PK>>
    --
    first_name : string
    last_name : string
    email : string
    mobile_nr : string
    country : string
    postal_code : string
    city : string
    address1 : string
    address2 : string
    user_id : int <<FK, nullable>> ' Nullable for guest
}

entity "Order" as Order {
    + order_id : int <<PK>>
    --
    order_date : date
    order_status : string
    user_id : int <<FK, nullable>> ' Nullable for guest
    address_id : int <<FK>>
}

entity "OrderItem" as OrderItem {
    + order_item_id : int <<PK>>
    --
    order_id : int <<FK>>
    product_id : int <<FK>>
    quantity : int
    price_at_purchase : decimal
}

' -------------------
' RELATIONSHIPS
' -------------------

Artist -right-|| User : "is"
User "0..1" --o{ Order : "places"
Product }o--|| Artist : "creates"
Order ||--o{ OrderItem : "contains"
OrderItem }o--|| Product : "references"
Order }o--|| Address : "ships to"
User "0..1" --o{ Address : "has" 

@enduml
